<resources>
    <string name="a11y_action_edit_subtask">edit subtask</string>
    <string name="a11y_action_edit_task">edit task</string>
    <string name="a11y_add_task_add_details">Add details</string>
    <string name="a11y_add_task_hide_more_options">Hide more options</string>
    <string name="a11y_add_task_set_date">Set date</string>
    <string name="a11y_add_task_show_more_options">Show more options</string>
    <string name="a11y_back_to_list">Back</string>
    <string name="a11y_collapse_completed">collapse</string>
    <string name="a11y_completed_task">completed task</string>
    <string name="a11y_date_picker_open">Date picker opened</string>
    <string name="a11y_delete_subtask">Delete subtask</string>
    <string name="a11y_due_date">Due date</string>
    <string name="a11y_edit_date">Edit date</string>
    <string name="a11y_expand_completed">expand</string>
    <string name="a11y_fab">Create new task</string>
    <string name="a11y_hamburger">Switch task lists or account</string>
    <string name="a11y_has_related_email">Related email</string>
    <string name="a11y_list_selector">List, %1$s selected, 1 of %2$d</string>
    <string name="a11y_mark_as_complete">Mark as complete</string>
    <string name="a11y_mark_as_not_complete">Mark as not complete</string>
    <string name="a11y_more_options_open">More options menu</string>
    <string name="a11y_move_task">move to another list</string>
    <string name="a11y_sort_by_date">Sort by date</string>
    <string name="a11y_sort_by_my_order">Sort by my order</string>
    <string name="a11y_subtask">Subtask</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_suspended">Account suspended</string>
    <string name="add_subtask">Add subtasks</string>
    <string name="add_task_save">Save</string>
    <string name="app_name">Tasks</string>
    <string name="app_update_nag">A newer version of Tasks app is available. Update now to get the best experience.</string>
    <string name="app_update_prompt">A newer version of Tasks app is available. Update now to get the best experience.</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bullet_separator">•</string>
    <string name="cannot_initialize_message_button">Setup account</string>
    <string name="combined_notification_text">&lt;b&gt; %1$s &lt;/b&gt; %2$s</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="completed_task_header">Completed (%1$d)</string>
    <string name="dasher_account_disabled">G Suite account disabled</string>
    <string name="delete_all_completed_tasks">Delete all completed tasks</string>
    <string name="delete_completed_tasks_button_delete">Delete</string>
    <string name="delete_completed_tasks_confirm_title">Delete all completed tasks?</string>
    <string name="delete_list">Delete list</string>
    <string name="delete_task">Delete</string>
    <string name="done">Done</string>
    <string name="due_date_header_later">Later</string>
    <string name="due_date_header_overdue">Past</string>
    <string name="due_date_header_today">Today</string>
    <string name="due_date_header_tomorrow">Tomorrow</string>
    <string name="due_date_header_unknown">No due date</string>
    <string name="due_date_tomorrow">tomorrow</string>
    <string name="edit_list">Rename list</string>
    <string name="empty_state_body">You\'ve finished all your tasks. Take a second to recharge.</string>
    <string name="empty_state_header">Nicely done!</string>
    <string name="error_creating_task">Failed to create task</string>
    <string name="fab_text">Add a new task</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="invalid_account">Account not found</string>
    <string name="invalid_credentials">Correct credentials needed</string>
    <string name="invalid_title">The title cannot be empty</string>
    <string name="list_add_title">Create new list</string>
    <string name="list_delete_confirm_ok_button">Delete</string>
    <string name="list_delete_confirm_title">Delete this list?</string>
    <string name="list_edit_title">Rename list</string>
    <string name="list_title_hint">Enter list title</string>
    <string name="location_permission_rationale">Tasks would like to use your location to provide more relevant suggestions.</string>
    <string name="more_options">More options</string>
    <string name="move_to_list_selector_title">Move task to</string>
    <string name="mtrl_chip_close_icon_content_description">Close icon</string>
    <string name="navigation_drawer_create_list">Create new list</string>
    <string name="navigation_drawer_licences">Open-source licenses</string>
    <string name="navigation_drawer_send_feedback">Send feedback</string>
    <string name="no_connection">You are offline. Features might be unavailable.</string>
    <string name="notification_channel_default">notification_channel_id_default</string>
    <string name="notification_channel_id_due">notification_channel_id_due</string>
    <string name="notification_channel_id_overdue">notification_channel_id_overdue</string>
    <string name="notification_channel_title_due_tasks">Due tasks</string>
    <string name="notification_channel_title_overdue_tasks">Overdue tasks</string>
    <string name="notification_group_id_due">notification_group_id_due</string>
    <string name="notification_group_id_overdue">notification_group_id_overdue</string>
    <string name="notification_more_tasks">+%1$d more</string>
    <string name="og_add_another_account">Add another account</string>
    <string name="og_choose_an_account">Choose an account</string>
    <string name="og_close_icon_a11y">Close</string>
    <string name="og_collapse_account_menu_a11y">Collapse account menu.</string>
    <string name="og_expand_account_menu_a11y">Expand account menu.</string>
    <string name="og_manage_accounts">Manage accounts on this device</string>
    <string name="og_my_account_desc">Manage your Google Account</string>
    <string name="og_privacy_policy">Privacy Policy</string>
    <string name="og_sign_in">Sign in</string>
    <string name="og_signed_in_user_a11y">Signed in as %1$s.</string>
    <string name="og_switch_account_to_recent_a11y">Switch to %1$s account</string>
    <string name="og_terms_of_service">Terms of Service</string>
    <string name="og_use_account_a11y">Use %1$s.</string>
    <string name="operation_due_date_cleared">Due date cleared</string>
    <string name="operation_due_date_updated">Due date updated</string>
    <string name="operation_failed">Some operations failed to be applied to the server. Please synchronize as soon as possible.</string>
    <string name="operation_task_completed">{taskCount, plural, =1 {1 completed} other {# completed} }</string>
    <string name="operation_task_deleted">{taskCount, plural, =1 {1 deleted} other {# deleted} }</string>
    <string name="operation_task_list_deleted">Task list deleted</string>
    <string name="operation_task_moved">{taskCount, plural, =1 {Moved} other {# moved} }</string>
    <string name="operation_task_opened">{taskCount, plural, =1 {1 marked incomplete} other {# marked incomplete} }</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="quick_add_task_hint">New task</string>
    <string name="sign_in">Sign in</string>
    <string name="task_order_menu_by_due_date">Date</string>
    <string name="task_order_menu_my_order">My order</string>
    <string name="task_order_menu_title">Sort by</string>
    <string name="tasks_add_details_hint">Add details</string>
    <string name="tasks_add_subtask_hint">Enter title</string>
    <string name="tasks_flatten_list_action">Update list</string>
    <string name="tasks_flatten_list_description">This list has multiple levels of subtasks, which aren\'t supported in Tasks. Update this list to use it in Tasks.</string>
    <string name="tasks_flatten_list_title">Update this list</string>
    <string name="tasks_not_synced">Your task list has not yet synced. Pull down to refresh when you are back online.</string>
    <string name="update_gmscore">Update Google Play services</string>
    <string name="welcome_body">Keep track of important things you need to get done in one place.</string>
    <string name="welcome_button">Get started</string>
    <string name="welcome_header">Welcome to Tasks</string>
    <string name="zero_state_body">Anything to add?</string>
    <string name="zero_state_header">A fresh start</string>
</resources>