<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BottomSheetMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/OptionMenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:text="@string/task_order_menu_title" />

        <com.google.android.apps.tasks.ui.components.CheckOptionItem
            android:id="@+id/my_order_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/a11y_sort_by_my_order"
            android:paddingLeft="@dimen/option_item_horiz_spacing_indented"
            app:text="@string/task_order_menu_my_order" />

        <com.google.android.apps.tasks.ui.components.CheckOptionItem
            android:id="@+id/order_by_due_date_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/a11y_sort_by_date"
            android:paddingLeft="@dimen/option_item_horiz_spacing_indented"
            app:text="@string/task_order_menu_by_due_date" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/option_item_vertical_spacing"
            android:layout_marginBottom="@dimen/option_item_vertical_spacing">

            <include layout="@layout/horizontal_separator" />
        </FrameLayout>

        <com.google.android.apps.tasks.ui.components.OptionItem
            android:id="@+id/rename_list_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_list" />

        <com.google.android.apps.tasks.ui.components.OptionItem
            android:id="@+id/delete_list_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_list" />

        <com.google.android.apps.tasks.ui.components.OptionItem
            android:id="@+id/delete_all_completed_tasks_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_all_completed_tasks" />

        <com.google.android.apps.tasks.ui.components.OptionItem
            android:id="@+id/search_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@android:string/search_go" />

        <com.google.android.apps.tasks.ui.components.OptionItem
            android:id="@+id/debug_info_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Debug info" />

        <com.google.android.apps.tasks.ui.components.OptionItem
            android:id="@+id/trigger_notifications_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Trigger notifications" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
