<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <View style="@style/DividerStyle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/privacy_policy"
            style="@style/FooterClickableActionItemStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/og_privacy_policy" />

        <TextView
            style="@style/FooterActionItemStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:importantForAccessibility="no"
            android:text="@string/bullet_separator" />

        <TextView
            android:id="@+id/terms_of_service"
            style="@style/FooterClickableActionItemStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/og_terms_of_service" />
    </LinearLayout>
</merge>
