<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:importantForAccessibility="yes">
    <com.google.android.apps.tasks.ui.components.FancyCheckboxView android:id="@+id/subtask_complete_check" android:padding="@dimen/task_item_check_padding" android:layout_width="@dimen/task_item_check_size" android:layout_height="@dimen/task_item_check_size" android:contentDescription="@string/a11y_mark_as_complete"/>
    <android.support.design.button.MaterialButton android:id="@+id/subtask_delete" android:paddingLeft="@dimen/edit_task_remove_subtask_button_padding" android:paddingTop="@dimen/edit_task_remove_subtask_button_padding" android:paddingRight="@dimen/edit_task_remove_subtask_button_padding" android:paddingBottom="@dimen/edit_task_remove_subtask_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/edit_task_remove_subtask_button_inset" android:insetLeft="@dimen/edit_task_remove_subtask_button_inset" android:insetRight="@dimen/edit_task_remove_subtask_button_inset" android:insetTop="@dimen/edit_task_remove_subtask_button_inset" android:insetBottom="@dimen/edit_task_remove_subtask_button_inset" android:contentDescription="@string/a11y_delete_subtask" app:icon="@drawable/quantum_ic_clear_grey600_18" app:iconTint="@null" style="@style/ImageButton"/>
    <EditText android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@color/google_grey900" android:id="@+id/subtask_title" android:background="@android:color/transparent" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/edit_task_subtask_title_start_spacing" android:layout_marginRight="@dimen/edit_task_subtask_title_end_spacing" android:minHeight="@dimen/edit_task_subtask_title_min_height" android:hint="@string/tasks_add_subtask_hint" android:maxLength="@integer/max_task_title_size" android:layout_centerVertical="true" android:inputType="none|text|textCapSentences|textAutoComplete|textMultiLine" android:importantForAccessibility="no"/>
</merge>
